--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,4 +1,4 @@
-name: Generate Contribution Snake
+name: Generate Snake
 
 on:
   schedule:
@@ -17,10 +17,10 @@ jobs:
       - name: Generate snake SVG
         uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: LbsLightX
+          github_user_name: ${{ github.repository_owner }}
           outputs: |
-            dist/github-snake.svg
-            dist/github-snake-dark.svg?palette=github-dark
+            dist/github-snake.svg?color_snake=%2300E5FF&color_dots=%230D1117,%231F2937,%2300E5FF,%237C3AED,%2322C55E
+            dist/github-snake-dark.svg?color_snake=%2300E5FF&color_dots=%230D1117,%231F2937,%2300E5FF,%237C3AED,%2322C55E
 
       - name: Publish to output branch
         uses: crazy-max/ghaction-github-pages@v4
